--- a/source/less/style.less
+++ b/source/less/style.less
@@ -1,1 +1,9 @@
 // Начните писать стили здесь
+@import "global.less";
+@import "components/page-header.less";
+@import "components/main-nav.less";
+@import "components/visually-hidden.less";
+@import "components/page.less";
+@import "components/product-info.less";
+@import "components/programs.less";
+
