--- a/source/less/globals/components/product-info.less
+++ b/source/less/globals/components/product-info.less
@@ -1,19 +1,12 @@
 // Начните писать стили здесь
-.font-oswald (@weight: 400; @size: 16px; @height: 16px) {
-  font-family: "Oswald", sans-serif;
-  font-weight: @weight;
-  font-size: @size;
-  line-height: @height;
-}
-
 .product-info {
   background-image: url("../img/index-background1.jpg"); /*тут заменить потом картинку 2 на 1*/
   background-size: 320px auto;
   background-repeat: no-repeat;
   position: relative;
 
-  &::after {
-    content: '';
+  &::before {
+    content: "";
     display: block;
     position: absolute;
     left: 0;
@@ -21,17 +14,19 @@
     width: 320px;
     height: 302px;
     z-index: 1;
-    background-color: rgba (104, 183, 56, 0.85);
+    background-color: rgba(@green, 0.85);
   }
 }
 
-product-info__content {
+.product-info__content {
   position: relative;
   z-index: 2;
 }
 
 .product-info__title {
-  .font-oswald (400; 36px; 36px);
+  font-weight: 400;
+  font-size: 36px;
+  line-height: 36px;
   text-align: center;
   color: #ffffff;
   display: block;
@@ -40,7 +35,9 @@ product-info__content {
 }
 
 .product-info__slogan {
-  .font-oswald (400; 14px; 14px);
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 14px;
   text-transform: uppercase;
   text-align: center;
   color: #ffffff;
@@ -61,7 +58,9 @@ product-info__content {
 }
 
 .product-info__program-selection {
-  .font-oswald (400; 14px; 18px);
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 18px;
   color: #ffffff;
   text-decoration: inherit;
   text-transform: uppercase;
