--- a/source/less/style.less
+++ b/source/less/style.less
@@ -1,9 +1,18 @@
 // Начните писать стили здесь
-@import "global.less";
-@import "components/page-header.less";
-@import "components/main-nav.less";
-@import "components/visually-hidden.less";
-@import "components/page.less";
-@import "components/product-info.less";
-@import "components/programs.less";
-
+@import "globals/global.less";
+@import "globals/variables.less";
+@import "globals/mixins.less";
+@import "globals/components/page-header.less";
+@import "globals/components/button.less";
+@import "globals/components/main-nav.less";
+@import "globals/components/visually-hidden.less";
+@import "globals/components/page.less";
+@import "globals/components/product-info.less";
+@import "globals/components/programs.less";
+@import "globals/components/advantages.less";
+@import "globals/components/example.less";
+@import "globals/components/footer-contacts.less";
+@import "globals/components/footer-media.less";
+@import "globals/components/shop.less";
+@import "globals/components/card.less";
+@import "globals/components/additions.less";
