Добавляет стилизацию формы

--- a/source/less/style.less
+++ b/source/less/style.less
@@ -16,3 +16,5 @@
 @import "globals/components/shop.less";
 @import "globals/components/card.less";
 @import "globals/components/additions.less";
+@import "globals/components/bio-data.less";
+@import "globals/components/data-form.less";
