--- a/source/less/globals/components/programs.less
+++ b/source/less/globals/components/programs.less
@@ -1,13 +1,24 @@
 // Начните писать стили здесь
 .programs {
   position: relative;
-  margin-left: 20px;
-  margin-right: 20px;
+  max-width: 320px;
+  margin-top: 20px;
+}
+
+.programs-wrapper {
+  @media (min-width: @tablet) {
+    margin-left: 52px;
+  }
 }
 
 .programs__item {
   background-color: @grey;
   position: relative;
+
+  @media (min-width: @tablet) {
+    width: 676px;
+    padding-left: 52px;
+  }
 }
 
 .programs__title {
@@ -17,6 +28,13 @@
   padding-top: 30px;
   text-transform: uppercase;
   font-weight: 400;
+
+  @media (min-width: @tablet) {
+    font-size: 36px;
+    line-height: 36px;
+    padding-top: 77px;
+    margin-left: 0px;
+  }
 
   &--slim::before {
     content: "";
@@ -28,6 +46,15 @@
     height: 50px;
     z-index: 1;
     background-image: url("../img/cat_slim.svg");
+
+    @media (min-width: @tablet) {
+      width: 140px;
+      height: 194px;
+      background-repeat: no-repeat;
+      background-size: 100%;
+      left: 476px;
+      top: 81px;
+    }
   }
 
   &--mass::before {
@@ -40,6 +67,15 @@
     height: 28px;
     z-index: 1;
     background-image: url("../img/cat_fit.svg");
+
+    @media (min-width: @tablet) {
+      width: 268px;
+      height: 112px;
+      background-repeat: no-repeat;
+      background-size: 100%;
+      left: 412px;
+      top: 135px;
+    }
   }
 
   &::after {
@@ -53,6 +89,13 @@
     z-index: 0;
     background-color: @green;
     border-radius: 50%;
+
+    @media (min-width: @tablet) {
+      width: 200px;
+      height: 200px;
+      left: 446px;
+      top: 92px;
+    }
   }
 }
 
@@ -66,6 +109,14 @@
   margin-right: 33px;
   margin-top: 29px;
 
+  @media (min-width: @tablet) {
+    margin-left: 0px;
+    width: 340px;
+    font-size: 16px;
+    line-height: 24px;
+    font-weight: 400;
+  }
+
   &::after {
     content: "";
     display: block;
@@ -77,7 +128,24 @@
     z-index: 0;
     background-color: @dark-grey;
     border-radius: 50%;
+
+    @media (min-width: @tablet) {
+      position: absolute;
+      width: 1px;
+      height: 1px;
+      margin: -1px;
+      border: 0;
+      padding: 0;
+      white-space: nowrap;
+      clip-path: inset(100%);
+      clip: rect(0 0 0 0);
+      overflow: hidden;
+    }
   }
+}
+
+.programs__link-wrapper {
+  position: relative;
 }
 
 .programs__link {
@@ -92,6 +160,14 @@
   padding-bottom: 22px;
   margin-bottom: 20px;
 
+  @media (min-width: @tablet) {
+    margin-left: 0px;
+    margin-top: 52px;
+    padding-bottom: 57px;
+    font-size: 20px;
+    line-height: 30px;
+  }
+
   &::after {
     content: "";
     position: absolute;
@@ -101,5 +177,10 @@
     width: 24px;
     height: 12px;
     background-image: url("../img/arrow-icon.png");
+
+    @media (min-width: @tablet) {
+      left: 133px;
+      top: 9px;
+    }
   }
 }
