--- a/source/less/globals/components/advantages.less
+++ b/source/less/globals/components/advantages.less
@@ -1,14 +1,42 @@
 // Начните писать стили здесь
 .advantages {
   position: relative;
+  max-width: 320px;
+
+  @media (min-width: @tablet) {
+    max-width: @tablet;
+  }
+}
+
+.advantages__wrapper {
+  margin-left: 20px;
+  margin-right: 20px;
+
+  @media (min-width: @tablet) {
+    margin-left: 30px;
+    margin-right: 30px;
+  }
 }
 
 .advantages__title {
   font-size: 36px;
   line-height: 40px;
-  margin-left: 20px;
   margin-bottom: 40px;
   font-weight: 400;
+
+  @media (min-width: @tablet) {
+    font-size: 60px;
+    line-height: 60px;
+    margin-bottom: 0px;
+  }
+}
+
+.advantages__list {
+  @media (min-width: @tablet) {
+    display: grid;
+    grid-template-columns: 384px 1fr;
+    margin: 0px;
+  }
 }
 
 .advantages__item {
@@ -16,6 +44,10 @@
 
   &:last-of-type {
     margin-bottom: 53px;
+
+    @media (min-width: @tablet) {
+      margin-bottom: 104px;
+    }
   }
 }
 
@@ -23,66 +55,133 @@
   font-family: "Arial", sans-serif;
   font-size: 14px;
   line-height: 18px;
-  margin-left: 100px;
-  margin-right: 20px;
+  margin-left: 80px;
   margin-bottom: 20px;
+
+  @media (min-width: @tablet) {
+    font-size: 16px;
+    line-height: 24px;
+    margin-left: 0px;
+    margin-top: 183px;
+    width: 245px;
+    z-index: 1;
+    position: relative;
+  }
 
   &::before {
     content: "";
     display: block;
     position: absolute;
-    left: 20px;
+    left: 0;
     top: 0;
     width: 60px;
     height: 60px;
     background-color: @green;
+
+    @media (min-width: @tablet) {
+      width: 80px;
+      height: 80px;
+      top: -111px;
+    }
   }
 
   &--bio::after {
     content: "";
     display: block;
     position: absolute;
-    left: 38px;
+    left: 18px;
     top: 16px;
     width: 60px;
     height: 60px;
     background-image: url("../img/leaf-icon.svg");
     background-repeat: no-repeat;
+
+    @media (min-width: @tablet) {
+      width: 80px;
+      height: 80px;
+      top: -84px;
+      left: 27px;
+    }
   }
 
   &--powder::after {
     content: "";
     display: block;
     position: absolute;
-    left: 35px;
+    left: 15px;
     top: 16px;
     width: 60px;
     height: 60px;
     background-image: url("../img/powder-icon.svg");
     background-repeat: no-repeat;
+
+    @media (min-width: @tablet) {
+      width: 80px;
+      height: 80px;
+      top: -84px;
+      left: 27px;
+    }
   }
 
   &--meal::after {
     content: "";
     display: block;
     position: absolute;
-    left: 39px;
+    left: 19px;
     top: 16px;
     width: 60px;
     height: 60px;
     background-image: url("../img/cuttlery-icon.svg");
     background-repeat: no-repeat;
+
+    @media (min-width: @tablet) {
+      width: 80px;
+      height: 80px;
+      top: -84px;
+      left: 27px;
+    }
   }
 
   &--time::after {
     content: "";
     display: block;
     position: absolute;
-    left: 38px;
+    left: 18px;
     top: 16px;
     width: 60px;
     height: 60px;
     background-image: url("../img/clock-icon.svg");
     background-repeat: no-repeat;
+
+    @media (min-width: @tablet) {
+      width: 80px;
+      height: 80px;
+      top: -84px;
+      left: 27px;
+    }
+  }
+}
+
+.advantages__description-number {
+  @media (max-width: @mobile-only) {
+    position: absolute;
+    width: 1px;
+    height: 1px;
+    margin: -1px;
+    border: 0;
+    padding: 0;
+    white-space: nowrap;
+    clip-path: inset(100%);
+    clip: rect(0 0 0 0);
+    overflow: hidden;
+  }
+
+  @media (min-width: @tablet) {
+    font-size: 280px;
+    line-height: 280px;
+    top: 32px;
+    left: 118px;
+    position: absolute;
+    color: @grey;
   }
 }
