--- a/source/less/globals/components/example.less
+++ b/source/less/globals/components/example.less
@@ -1,36 +1,88 @@
 // Начните писать стили здесь
 .example {
   background-color: @background-grey;
+  max-width: 320px;
+  position: relative;
+
+  @media (min-width: @tablet) {
+    max-width: @tablet;
+
+    &::after {
+      content: "";
+      position: absolute;
+      display: block;
+      width: @tablet;
+      height: 619px;
+      background-color: @white;
+      left: 0px;
+      top: 0px;
+      z-index: 1;
+    }
+  }
+}
+
+.example__wrapper {
+  margin-left: 20px;
+  margin-right: 20px;
+
+  @media (min-width: @tablet) {
+    margin-left: 30px;
+    margin-right: 30px;
+    position: relative;
+    z-index: 2;
+  }
 }
 
 .example__title {
   font-size: 36px;
   line-height: 40px;
-  margin-left: 20px;
   margin-bottom: 40px;
   font-weight: 400;
   padding-top: 25px;
+
+  @media (min-width: @tablet) {
+    font-size: 60px;
+    line-height: 60px;
+    margin-bottom: 63px;
+  }
 }
 
 .example__description {
   font-family: Arial, sans-serif;
   font-size: 14px;
   line-height: 18px;
-  margin-left: 20px;
-  margin-right: 20px;
   margin-bottom: 20px;
   color: @special_dark-grey;
+
+  @media (min-width: @tablet) {
+    font-size: 16px;
+    line-height: 24px;
+    margin-bottom: 54px;
+    width: 700px;
+  }
+}
+
+.example__results-wrapper {
+  @media (min-width: @tablet) {
+    display: flex;
+  }
 }
 
 .example__stats-wrapper {
   display: flex;
   justify-content: space-between;
-  margin-left: 20px;
-  margin-right: 20px;
+
+  @media (min-width: @tablet) {
+    justify-content: start;
+  }
 }
 
 .example__weight-wrapper {
   position: relative;
+
+  @media (min-width: @tablet) {
+    margin-right: 42px;
+  }
 }
 
 .example__time-wrapper {
@@ -49,6 +101,16 @@
   padding-bottom: 17px;
   width: 124px;
   margin-bottom: 34px;
+  border-radius: 3px;
+
+  @media (min-width: @tablet) {
+    margin: 0px;
+    width: 162px;
+    font-size: 30px;
+    line-height: 37px;
+    padding-top: 15px;
+    padding-bottom: 18px;
+  }
 }
 
 .example__label {
@@ -62,7 +124,19 @@
   left: 16px;
   top: 72px;
   background-color: @background-grey;
-  width: 87px;
+  background-size: 320px auto;
+  background-position: -20px;
+  padding-left: 4px;
+  padding-right: 6px;
+
+  @media (min-width: @tablet) {
+    background-color: @white;
+    top: 64px;
+    left: 24px;
+    max-width: 145px;
+    padding-left: 8px;
+    padding-right: 9px;
+  }
 }
 
 .example__finance {
@@ -72,18 +146,55 @@
   text-transform: uppercase;
   margin-top: 0px;
   margin-bottom: 40px;
+
+  @media (min-width: @tablet) {
+    margin-left: auto;
+    font-size: 20px;
+    line-height: 30px;
+    width: 175px;
+    text-align: end;
+  }
 }
 
 .example__slider {
-  margin-left: 20px;
-  margin-right: 20px;
   padding-bottom: 40px;
+}
+
+.slider__cat-image-wrapper {
+  @media (min-width: @tablet) {
+    display: flex;
+    margin-top: 72px;
+    margin-left: 59px;
+  }
+}
+
+.slider__cat-image-fat {
+
+  @media (min-width: @tablet) {
+    background-image: url("/img/cat-fat-tablet.png");
+    width: 296px;
+    height: 511px;
+  }
+}
+
+.slider__cat-image-slim {
+
+  @media (min-width: @tablet) {
+    background-image: url("/img/cat-slim-tablet.png");
+    width: 296px;
+    height: 511px;
+  }
 }
 
 .slider__wrapper {
   display: flex;
-  margin-left: 55px;
-  margin-right: 55px;
+  margin-left: 35px;
+  margin-right: 35px;
+
+  @media (min-width: @tablet) {
+    margin-left: 70px;
+    margin-right: 70px;
+  }
 }
 
 .slider__text {
@@ -95,6 +206,11 @@
   width: 49px;
   height: 30px;
   padding-top: 9px;
+
+  @media (min-width: @tablet) {
+    font-size: 20px;
+    line-height: 30px;
+  }
 }
 
 .slider__button {
@@ -105,4 +221,59 @@
   align-self: center;
   border: 1px solid @border-grey;
   border-radius: 6px;
+  position: relative;
+
+  @media (min-width: @tablet) {
+    margin-left: 23px;
+    margin-right: 23px;
+    width: 426px;
+    height: 6px;
+    background-color: @slider-grey;
+    border: none;
+    margin-top: 10px;
+  }
+
+  &::before {
+    @media (min-width: @tablet) {
+      content: "";
+      position: absolute;
+      width: 34px;
+      height: 34px;
+      background-color: @white;
+      top: -14px;
+      left: 196px;
+      border-radius: 50%;
+    }
+
+    @media (max-width: @mobile-only) {
+      position: absolute;
+      width: 1px;
+      height: 1px;
+      margin: -1px;
+      border: 0;
+      padding: 0;
+      white-space: nowrap;
+      clip-path: inset(100%);
+      clip: rect(0 0 0 0);
+      overflow: hidden;
+    }
+  }
+
+  &::after {
+    content: "";
+    position: absolute;
+    width: 36px;
+    height: 6px;
+    background-color: @green;
+    top: 3px;
+    left: 6px;
+    border-radius: 6px;
+
+    @media (min-width: @tablet) {
+      width: 8px;
+      height: 8px;
+      left: 209px;
+      top: -1px;
+    }
+  }
 }
