--- a/source/less/globals/components/footer-contacts.less
+++ b/source/less/globals/components/footer-contacts.less
@@ -1,11 +1,20 @@
 // Начните писать стили здесь
 .footer-contacts {
+  &--white-background {
+    background-color: @grey;
+  }
+}
+
+.footer-contacts-wrapper {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
+  margin-left: 20px;
+  margin-right: 20px;
 
-  &--white-background {
-    background-color: @grey;
+  @media (min-width: @tablet) {
+    margin-left: 30px;
+    margin-right: 30px;
   }
 }
 
@@ -16,9 +25,23 @@
   line-height: 20px;
   text-transform: uppercase;
   font-weight: 400;
-  margin-left: 20px;
   margin-top: 26px;
   margin-bottom: 26px;
+
+  @media (min-width: @tablet) {
+    font-size: 20px;
+    line-height: 26px;
+    margin-top: 60px;
+    margin-left: 40px;
+    margin-bottom: 56px;
+    width: 172px;
+  }
+}
+
+.footer-contacts__address-wrapper {
+  @media (min-width: @tablet) {
+    margin-top: 56px;
+  }
 }
 
 .footer-contacts__address {
@@ -26,12 +49,25 @@
   width: 139px;
   font-family: "Arial", sans-serif;
   font-style: inherit;
-  margin-right: 20px;
   margin-top: 26px;
   margin-bottom: 26px;
+
+  @media (min-width: @tablet) {
+    text-align: end;
+    font-size: 16px;
+    line-height: 20px;
+    width: 160px;
+    margin-top: 0;
+    margin-right: 40px;
+  }
 }
 
-.contacts__map {
+.footer-contacts__map {
   width: 320px;
   height: 362px;
+
+  @media (min-width: @tablet) {
+    width: 768px;
+    height: 400px;
+  }
 }
