--- a/source/less/globals/components/footer-media.less
+++ b/source/less/globals/components/footer-media.less
@@ -2,17 +2,47 @@
 .footer-media {
   background-color: @grey;
   position: relative;
+  min-height: 236px;
+
+  @media (min-width: @tablet) {
+    min-height: 147px;
+  }
+}
+
+.footer-media-wrapper {
+  margin-left: 20px;
+  margin-right: 20px;
+
+  @media (min-width: @tablet) {
+    margin-left: 30px;
+    margin-right: 30px;
+    display: flex;
+    justify-content: space-between;
+  }
 }
 
 .footer-media__logo::after {
-    content: "";
-    display: block;
+  content: "";
+  display: block;
+  position: absolute;
+  left: 20px;
+  top: 95px;
+  width: 280px;
+  height: 1px;
+  background-color: @dark-grey;
+
+  @media (min-width: @tablet) {
     position: absolute;
-    left: 20px;
-    top: 95px;
-    width: 280px;
+    width: 1px;
     height: 1px;
-    background-color: @dark-grey;
+    margin: -1px;
+    border: 0;
+    padding: 0;
+    white-space: nowrap;
+    clip-path: inset(100%);
+    clip: rect(0 0 0 0);
+    overflow: hidden;
+  }
 }
 
 .footer-media__logo-title {
@@ -21,14 +51,26 @@
   margin-left: auto;
   margin-right: auto;
   margin-bottom: 32px;
+
+  @media (min-width: @tablet) {
+    margin-top: 63px;
+    margin-bottom: 60px;
+    padding-top: 0;
+  }
 }
 
 .social {
   display: flex;
   position: relative;
-  margin-left: 93px;
-  margin-right: 102px;
+  margin-left: 73px;
+  margin-right: 82px;
   justify-content: space-between;
+
+  @media (min-width: @tablet) {
+    margin-top: auto;
+    margin-bottom: auto;
+    width: 122px;
+  }
 
   &::after {
     content: "";
@@ -37,8 +79,21 @@
     left: -73px;
     top: 63px;
     width: 280px;
-    height: 2px;
+    height: 1px;
     background-color: @dark-grey;
+
+    @media (min-width: @tablet) {
+      position: absolute;
+      width: 1px;
+      height: 1px;
+      margin: -1px;
+      border: 0;
+      padding: 0;
+      white-space: nowrap;
+      clip-path: inset(100%);
+      clip: rect(0 0 0 0);
+      overflow: hidden;
+    }
   }
 }
 
@@ -56,6 +111,12 @@
   margin-top: auto;
   margin-bottom: auto;
   background-position: center;
+
+  @media (min-width: @tablet) {
+    width: 29px;
+    height: 17px;
+    background-size: 29px, 17px;
+  }
 }
 
 .insta-logo {
@@ -67,6 +128,12 @@
   margin-top: auto;
   margin-bottom: auto;
   background-position: center;
+
+  @media (min-width: @tablet) {
+    width: 23px;
+    height: 23px;
+    background-size: 23px, 23px;
+  }
 }
 
 .fb-logo {
@@ -78,12 +145,24 @@
   margin-top: auto;
   margin-bottom: auto;
   background-position: center;
+
+  @media (min-width: @tablet) {
+    width: 15px;
+    height: 29px;
+    background-size: 15px, 29px;
+  }
 }
 
 .footer-media__HTML-academy-wrapper {
   position: relative;
   margin-top: 28px;
   margin-bottom: 32px;
+
+  @media (min-width: @tablet) {
+    margin-top: auto;
+    margin-bottom: auto;
+    margin-right: 50px;
+  }
 }
 
 .footer-media__HTML-academy-logo {
@@ -92,7 +171,6 @@
   font-family: "Arial", sans-serif;
   font-size: 16px;
   line-height: 18px;
-  margin-left: 19px;
 
   &::after {
     content: "";
@@ -101,7 +179,11 @@
     width: 27px;
     height: 34px;
     position: absolute;
-    right: 20px;
+    right: 0;
     top: -5px;
+
+    @media (min-width: @tablet) {
+      right: -49px;
+    }
   }
 }
