--- a/source/less/globals/variables.less
+++ b/source/less/globals/variables.less
@@ -1,4 +1,5 @@
-// Начните писать стили здесь
+// Colors
+
 @green: #68B738;
 @grey: #F2F2F2;
 @dark-grey: #D9D9D9;
@@ -11,3 +12,12 @@
 @plus-grey: #D3D3D3;
 @white: #FFFFFF;
 @border-grey2: #E7E7E7;
+@figma-background: #E5E5E5;
+@contrast: tomato;
+@slider-grey: #DCDCDC;
+
+// Viewports
+
+@tablet: 768px;
+@laptop: 1440px;
+@mobile-only: 767px;
