--- a/source/less/globals/components/footer-media.less
+++ b/source/less/globals/components/footer-media.less
@@ -19,6 +19,11 @@
     display: flex;
     justify-content: space-between;
   }
+
+  @media (min-width: @laptop) {
+    margin-left: 110px;
+    margin-right: 110px;
+  }
 }
 
 .footer-media__logo::after {
