--- a/source/less/globals/components/additions.less
+++ b/source/less/globals/components/additions.less
@@ -1,8 +1,17 @@
 // Начните писать стили здесь
 .additions {
-  margin-left: 20px;
-  margin-right: 20px;
   position: relative;
+
+  @media (min-width: @tablet) {
+    margin-top: 68px;
+  }
+}
+
+.additions__wrapper {
+  @media (min-width: @laptop) {
+    position: relative;
+    display: flex;
+  }
 }
 
 .additions__title {
@@ -10,6 +19,17 @@
   line-height: 24px;
   font-weight: 400;
   margin-bottom: 36px;
+
+  @media (min-width: @tablet) {
+    font-size: 36px;
+    line-height: 36px;
+    font-weight: 400;
+    margin-left: 37px;
+  }
+
+  @media (min-width: @laptop) {
+    margin-left: 0;
+  }
 
   &::before {
     content: "";
@@ -19,6 +39,16 @@
     background-color: @green;
     top: 15px;
     right: -20px;
+
+    @media (min-width: @tablet) {
+      width: 328px;
+      right: -30px;
+    }
+
+    @media (min-width: @laptop) {
+      width: 957px;
+      right: -110px;
+    }
   }
 
   &::after {
@@ -28,18 +58,54 @@
     height: 1px;
     background-color: @border-grey;
     top: 58px;
-    left: 0px;
+    left: 0;
+
+    @media (min-width: @tablet) {
+      width: 30px;
+      height: 2px;
+      background-color: @green;
+      top: 15px;
+      left: -30px;
+    }
+
+    @media (min-width: @laptop) {
+      width: 70px;
+      left: -110px;
+    }
   }
 }
 
 .additions__list {
   margin-top: 49px;
   margin-bottom: 54px;
+
+  @media (min-width: @tablet) {
+    border: 1px solid @border-grey;
+  }
+
+  @media (min-width: @tablet) {
+    border-left: transparent;
+    border-right: transparent;
+    width: 895px;
+  }
 }
 
 .additions__item {
   position: relative;
   margin-top: 31px;
+
+  @media (min-width: @tablet) {
+    margin-left: 35px;
+    display: grid;
+    grid-template-columns: 316px 316px;
+  }
+
+  @media (min-width: @laptop) {
+    margin-left: 0;
+    display: grid;
+    grid-template-columns: 324px 326px 244px;
+    margin-top: 15px;
+  }
 }
 
 .additions__label {
@@ -47,7 +113,19 @@
   line-height: 16px;
   font-weight: 400;
   text-transform: uppercase;
-  margin-top: 0px;
+  margin-top: 0;
+
+  @media (min-width: @tablet) {
+    font-size: 20px;
+    line-height: 20px;
+    font-weight: 400;
+    display: block;
+    margin-bottom: 25px;
+  }
+
+  @media (min-width: @laptop) {
+    margin-bottom: 0;
+  }
 }
 
 .additions__properties {
@@ -55,6 +133,16 @@
   width: 280px;
   justify-content: space-between;
   margin-bottom: 15px;
+  flex-wrap: wrap;
+
+  @media (min-width: @tablet) {
+    width: auto;
+  }
+
+  @media (min-width: @laptop) {
+    margin-bottom: 0;
+    width: 288px;
+  }
 }
 
 .additions__category {
@@ -62,7 +150,18 @@
   font-size: 14px;
   line-height: 14px;
   font-weight: 400;
-  margin: 0px;
+  margin: 0;
+
+  @media (min-width: @tablet) {
+    margin-left: auto;
+    font-size: 16px;
+    line-height: 20px;
+    font-weight: 400;
+  }
+
+  @media (min-width: @laptop) {
+    margin-left: 0;
+  }
 }
 
 .additions__measure {
@@ -70,12 +169,34 @@
   font-size: 14px;
   line-height: 14px;
   font-weight: 400;
-  margin: 0px;
+  margin: 0;
+
+  @media (min-width: @tablet) {
+    margin-left: 49px;
+    font-size: 16px;
+    line-height: 20px;
+    font-weight: 400;
+  }
+
+  @media (min-width: @laptop) {
+    margin-left: 0;
+  }
 }
 
 .additions__order {
-  margin: 0px;
+  margin: 0;
   width: 280px;
+
+  @media (min-width: @tablet) {
+    width: 632px;
+    margin-bottom: 28px;
+  }
+
+  @media (min-width: @laptop) {
+    width: 244px;
+    margin-bottom: 32px;
+    margin-left: 0;
+  }
 
   &::after {
     content: "";
@@ -84,6 +205,147 @@
     height: 1px;
     background-color: @border-grey;
     top: 119px;
-    left: 0px;
+    left: 0;
+
+    @media (min-width: @tablet) {
+      width: 706px;
+      top: 113px;
+      left: -35px;
+    }
+
+    @media (min-width: @laptop) {
+      width: 895px;
+      top: 60px;
+      left: 0;
+    }
+  }
+}
+
+.additions__promo-wrapper {
+  position: relative;
+  display: flex;
+  position: relative;
+
+  @media (min-width: @tablet) {
+    margin-bottom: 76px;
+
+  }
+
+  @media (min-width: @laptop) {
+    margin-left: 80px;
+    margin-top: 57px;
+  }
+
+  &::before {
+    content: "";
+    display: block;
+    width: 280px;
+    height: 290px;
+    background-image: url("/img/catalog-background1.jpg");
+    background-size: 279px 289px;
+    background-repeat: no-repeat;
+    position: absolute;
+    left: 0;
+    top: 0;
+
+    @media (min-width: @tablet) {
+      width: 707px;
+      height: 200px;
+      background-image: url("/img/catalog-background-tablet1.jpg");
+      background-size: 707px 200px;
+    }
+
+    @media (min-width: @laptop) {
+      width: 245px;
+      height: 289px;
+      background-image: url("/img/catalog-background-laptop1.jpg");
+      background-size: 245px 289px;
+    }
+  }
+
+  &::after {
+    content: "";
+    display: block;
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 280px;
+    height: 290px;
+    background-color: rgba(@green, 0.85);
+
+    @media (min-width: @tablet) {
+      width: 707px;
+      height: 200px;
+      background-size: 707px 200px;
+    }
+
+    @media (min-width: @laptop) {
+      width: 245px;
+      height: 289px;
+      background-size: 245px 289px;
+    }
+  }
+}
+
+.additions__promo {
+  display: block;
+  font-family: "Arial", sans-serif;
+  font-size: 16px;
+  line-height: 20px;
+  font-weight: 400;
+  color: @white;
+  margin-left: auto;
+  margin-right: auto;
+  text-align: center;
+  padding-top: 59px;
+  padding-bottom: 43px;
+  z-index: 1;
+  position: relative;
+  width: 161px;
+  margin-bottom: 35px;
+
+  @media (min-width: @tablet) {
+    width: 161px;
+    padding-top: 0px;
+    margin-top: 71px;
+    margin-left: 422px;
+    text-align: left;
+    font-size: 16px;
+    line-height: 20px;
+    font-weight: 400;
+  }
+
+  @media (min-width: @laptop) {
+    margin-top: 185px;
+    margin-left: 41px;
+    text-align: center;
+  }
+
+  &::before {
+    content: "";
+    display: block;
+    position: relative;
+    margin-left: auto;
+    margin-right: auto;
+    width: 78px;
+    height: 80px;
+    background-image: url("/img/icon_gift.svg");
+    background-repeat: no-repeat;
+    margin-bottom: 48px;
+
+    @media (min-width: @tablet) {
+      position: absolute;
+      width: 80px;
+      height: 83px;
+      left: -349px;
+      top: -17px;
+      background-size: 93px 100px;
+    }
+
+    @media (min-width: @laptop) {
+      left: 34px;
+      top: -143px;
+      background-size: 93px 100px;
+    }
   }
 }
