--- a/source/less/globals/components/advantages.less
+++ b/source/less/globals/components/advantages.less
@@ -6,6 +6,10 @@
   @media (min-width: @tablet) {
     max-width: @tablet;
   }
+
+  @media (min-width: @laptop) {
+    max-width: @laptop;
+  }
 }
 
 .advantages__wrapper {
@@ -15,6 +19,11 @@
   @media (min-width: @tablet) {
     margin-left: 30px;
     margin-right: 30px;
+  }
+
+  @media (min-width: @laptop) {
+    margin-left: 110px;
+    margin-right: 110px;
   }
 }
 
@@ -27,7 +36,11 @@
   @media (min-width: @tablet) {
     font-size: 60px;
     line-height: 60px;
-    margin-bottom: 0px;
+    margin-bottom: 0;
+  }
+
+  @media (min-width: @laptop) {
+    margin-top: 71px;
   }
 }
 
@@ -35,7 +48,13 @@
   @media (min-width: @tablet) {
     display: grid;
     grid-template-columns: 384px 1fr;
-    margin: 0px;
+    margin: 0;
+  }
+
+  @media (min-width: @laptop) {
+    display: flex;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    justify-content: space-between;
   }
 }
 
@@ -61,7 +80,7 @@
   @media (min-width: @tablet) {
     font-size: 16px;
     line-height: 24px;
-    margin-left: 0px;
+    margin-left: 0;
     margin-top: 183px;
     width: 245px;
     z-index: 1;
