--- a/source/less/globals/components/data-form.less
+++ b/source/less/globals/components/data-form.less
@@ -1,17 +1,59 @@
 // Начните писать стили здесь
+.data-form {
+  @media (min-width: @tablet) {
+    margin-top: 66px;
+  }
+}
+
+.data-form__bio-and-program-wrapper {
+  @media (min-width: @laptop) {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+  }
+}
+
+.data-form__list {
+  margin-bottom: 0px;
+}
+
+.data-form__list2 {
+  margin-top: 28px;
+  margin-bottom: 25px;
+
+  @media (min-width: @tablet) {
+    border: 1px solid @border-grey2;
+  }
+
+  @media (min-width: @laptop) {
+    margin-top: 0px;
+    width: 570px;
+    margin-left: auto;
+  }
+}
+
 .data-form__item {
   display: flex;
   position: relative;
 }
 
+.underline-list.data-form__list {
+  @media (min-width: @laptop) {
+    width: 569px;
+  }
+}
+
 .underline-list .data-form__item:last-of-type::after {
-    content: "";
-    position: absolute;
-    width: 320px;
-    height: 1px;
-    background-color: @dark-grey;
-    top: 69px;
-    left: -20px;
+  content: "";
+  position: absolute;
+  width: 320px;
+  height: 1px;
+  background-color: @dark-grey;
+  top: 69px;
+  left: -20px;
+
+    @media (min-width: @tablet) {
+      display: none;
+    }
 }
 
 .data-form__label {
@@ -23,6 +65,11 @@
   margin-right: 12px;
   margin-top: 13px;
   white-space: nowrap;
+
+  @media (min-width: @tablet) {
+    font-size: 20px;
+    line-height: 30px;
+  }
 }
 
 .data-form__input {
@@ -35,14 +82,25 @@
   font-size: 16px;
   line-height: 18px;
   padding-left: 15px;
+  border: 1px solid @border-grey2;
 
   &:last-of-type {
     margin-bottom: 24px;
+  }
+
+  @media (min-width: @tablet) {
+    font-size: 20px;
+    line-height: 30px;
+    padding-left: 19px;
   }
 }
 
 .data-form__input.contacts-input {
   margin-bottom: 14px;
+}
+
+.data-form__radio {
+  display: none;
 }
 
 .data-form__program-label {
@@ -51,20 +109,52 @@
   line-height: 18px;
   font-weight: 400;
   text-transform: uppercase;
-  margin-left: 15px;
+  margin-left: 45px;
+  position: relative;
+
+  @media (min-width: @tablet) {
+    font-size: 20px;
+    line-height: 30px;
+    }
+
+  &::before {
+    content: "";
+    position: absolute;
+    width: 30px;
+    height: 30px;
+    border-radius: 50%;
+    left: -45px;
+    top: -6px;
+    border: 1px solid @border-grey;
+  }
 }
 
-.data-form__list {
-  margin-bottom: 0px;
-}
 
-.data-form__list2 {
-  margin-top: 28px;
-  margin-bottom: 25px;
+.data-form__radio:checked ~ .data-form__program-label::after {
+  content: "";
+  position: absolute;
+  width: 14px;
+  height: 14px;
+  border-radius: 50%;
+  left: -36px;
+  top: 3px;
+  background-color: @green;
 }
 
 .data-form__list2 .data-form__item {
   margin-bottom: 25px;
+
+  @media (min-width: @tablet) {
+    padding-left: 28px;
+    &:first-of-type {
+      padding-top: 30px;
+    }
+
+    &:last-of-type {
+      padding-bottom: 30px;
+      margin-bottom: 0px;
+    }
+  }
 
   &:last-of-type::after {
     content: "";
@@ -81,8 +171,11 @@
   position: relative;
 }
 
-.data-form__extra-wrapper {
-  position: relative;
+.data-form__contacts-wrapper .data-form__list {
+  @media (min-width: @tablet) {
+    margin-top: 76px;
+    margin-bottom: 65px;
+  }
 }
 
 .data-form__contacts-wrapper .data-form__title {
@@ -92,6 +185,12 @@
   font-weight: 400;
   margin-bottom: 35px;
 
+  @media (min-width: @tablet) {
+    font-size: 36px;
+    line-height: 36px;
+    font-weight: 400;
+  }
+
   &::before {
     content: "";
     position: absolute;
@@ -100,25 +199,83 @@
     background-color: @green;
     top: 15px;
     right: -20px;
+
+    @media (min-width: @tablet) {
+      width: 145px;
+      right: -70px;
+    }
+
+    @media (min-width: @laptop) {
+      width: 778px;
+      right: -110px;
+    }
+  }
+
+  &::after {
+    content: "";
+    position: absolute;
+    width: 30px;
+    height: 2px;
+    background-color: @green;
+    top: 15px;
+    left: -70px;
+
+    @media (max-width: @mobile-only) {
+      display: none;
+    }
+
+    @media (min-width: @laptop) {
+      width: 70px;
+      left: -110px;
+    }
   }
 }
 
-.data-form__extra-wrapper .data-form__title {
-  margin-top: 23px;
-  font-size: 24px;
-  line-height: 26px;
+.data-form__checkbox-input {
+  display: none;
+}
+
+.data-form__checkbox-label {
+  font-size: 16px;
+  line-height: 18px;
   font-weight: 400;
-  margin-bottom: 34px;
+  text-transform: uppercase;
+  margin-bottom: 25px;
+  margin-left: 46px;
+
+  @media (min-width: @tablet) {
+    font-size: 20px;
+    line-height: 30px;
+  }
 
   &::before {
     content: "";
     position: absolute;
-    width: 136px;
-    height: 2px;
-    background-color: @green;
-    top: 15px;
-    right: -20px;
+    width: 30px;
+    height: 30px;
+    border: 1px solid @border-grey;
+    left: 0px;
+    top: -6px;
+
+    @media (min-width: @tablet) {
+     top: 0px;
+    }
   }
+}
+
+.data-form__checkbox-input:checked ~ .data-form__checkbox-label::after {
+  content: "";
+  position: absolute;
+  width: 18px;
+  height: 14px;
+  border-radius: 50%;
+  left: 7px;
+  top: 3px;
+  background-image: url("/img/tick.svg");
+
+  @media (min-width: @tablet) {
+    top: 7px;
+   }
 }
 
 .data-form__comments-wrapper {
@@ -131,6 +288,12 @@
   font-weight: 400;
   margin-top: 0px;
 
+  @media (min-width: @tablet) {
+    font-size: 36px;
+    line-height: 36px;
+    font-weight: 400;
+  }
+
   &::before {
     content: "";
     position: absolute;
@@ -139,6 +302,35 @@
     background-color: @green;
     top: 15px;
     right: -20px;
+
+    @media (min-width: @tablet) {
+      width: 478px;
+      right: -70px;
+    }
+
+    @media (min-width: @laptop) {
+      width: 1108px;
+      right: -110px;
+    }
+  }
+
+  &::after {
+    content: "";
+    position: absolute;
+    width: 30px;
+    height: 2px;
+    background-color: @green;
+    top: 15px;
+    left: -70px;
+
+    @media (max-width: @mobile-only) {
+      display: none;
+    }
+
+    @media (min-width: @laptop) {
+      width: 70px;
+      left: -110px;
+    }
   }
 }
 
@@ -158,15 +350,95 @@
   padding-left: 15px;
   padding-right: 12px;
   padding-bottom: 9px;
+
+  @media (min-width: @tablet) {
+    width: 600px;
+    margin-top: 76px;
+    font-size: 20px;
+    line-height: 30px;
+    margin-bottom: 65px;
+  }
+
+  @media (min-width: @laptop) {
+    width: 1190px;
+  }
 }
 
-.data-form__checkbox-label {
-  font-size: 16px;
-  line-height: 18px;
+.data-form__extra-wrapper {
+  position: relative;
+}
+
+.data-form__extra-wrapper .data-form__list {
+  @media (min-width: @tablet) {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+  }
+
+  @media (min-width: @laptop) {
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+  }
+}
+
+.data-form__extra-wrapper .data-form__title {
+  margin-top: 23px;
+  font-size: 24px;
+  line-height: 26px;
   font-weight: 400;
-  text-transform: uppercase;
-  margin-bottom: 25px;
-  margin-left: 16px;
+  margin-bottom: 34px;
+
+  @media (min-width: @tablet) {
+    font-size: 36px;
+    line-height: 36px;
+    font-weight: 400;
+  }
+
+  &::before {
+    content: "";
+    position: absolute;
+    width: 136px;
+    height: 2px;
+    background-color: @green;
+    top: 15px;
+    right: -20px;
+
+    @media (min-width: @tablet) {
+      width: 446px;
+      right: -70px;
+    }
+
+    @media (min-width: @laptop) {
+      width: 1078px;
+      right: -110px;
+    }
+  }
+
+  &::after {
+    content: "";
+    position: absolute;
+    width: 30px;
+    height: 2px;
+    background-color: @green;
+    top: 15px;
+    left: -70px;
+
+    @media (max-width: @mobile-only) {
+      display: none;
+    }
+
+    @media (min-width: @laptop) {
+      width: 70px;
+      left: -110px;
+    }
+  }
+}
+
+.data-form__button-wrapper {
+  @media (min-width: @tablet) {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    justify-items: start;
+    margin-bottom: 72px;
+  }
 }
 
 .data-form__button {
@@ -174,6 +446,16 @@
   border: none;
   margin-top: 16px;
   margin-bottom: 21px;
+
+  @media (min-width: @tablet) {
+    margin-left: 0px;
+    width: 282px;
+    height: 52px;
+  }
+
+  @media (min-width: @laptop) {
+    width: 568px;
+  }
 }
 
 .data-form__legend {
@@ -184,4 +466,11 @@
   font-weight: 400;
   margin-top: 0px;
   margin-bottom: 32px;
+
+  @media (min-width: @tablet) {
+    font-size: 16px;
+    line-height: 16px;
+    margin-top: auto;
+    margin-bottom: auto;
+  }
 }
