--- a/source/less/globals/components/footer-contacts.less
+++ b/source/less/globals/components/footer-contacts.less
@@ -16,6 +16,17 @@
     margin-left: 30px;
     margin-right: 30px;
   }
+
+  @media (min-width: @laptop) {
+    margin-left: 0;
+    margin-right: 0;
+    position: absolute;
+    background-color: @white;
+    width: 565px;
+    height: 198px;
+    left: 110px;
+    bottom: 256px;
+  }
 }
 
 .footer-contacts__invitation {
@@ -36,11 +47,22 @@
     margin-bottom: 56px;
     width: 172px;
   }
+
+  @media (min-width: @laptop) {
+    margin-left: 80px;
+  }
 }
 
 .footer-contacts__address-wrapper {
+  margin-top: 26px;
+  margin-bottom: 26px;
+
   @media (min-width: @tablet) {
     margin-top: 56px;
+  }
+
+  @media (min-width: @tablet) {
+    margin-right: 80px;
   }
 }
 
@@ -49,11 +71,18 @@
   width: 139px;
   font-family: "Arial", sans-serif;
   font-style: inherit;
-  margin-top: 26px;
-  margin-bottom: 26px;
 
   @media (min-width: @tablet) {
     text-align: end;
+    font-size: 16px;
+    line-height: 20px;
+    width: 160px;
+    margin-top: 0;
+    margin-right: 40px;
+  }
+
+  @media (min-width: @tablet) {
+    text-align: start;
     font-size: 16px;
     line-height: 20px;
     width: 160px;
@@ -65,9 +94,16 @@
 .footer-contacts__map {
   width: 320px;
   height: 362px;
+  border: none;
+  display: block;
 
   @media (min-width: @tablet) {
     width: 768px;
+    height: 400px;
+  }
+
+  @media (min-width: @laptop) {
+    width: 1440px;
     height: 400px;
   }
 }
