--- a/source/less/globals/components/page-header.less
+++ b/source/less/globals/components/page-header.less
@@ -18,10 +18,6 @@
       content: none;
     }
   }
-
-  @media (min-width: @tablet) {
-    flex-wrap: wrap;
-  }
 }
 
 .page-header__wrapper {
@@ -31,6 +27,11 @@
   @media (min-width: @tablet) {
     margin-left: 30px;
     margin-right: 30px;
+  }
+
+  @media (min-width: @laptop) {
+    margin-left: 110px;
+    margin-right: 110px;
   }
 }
 
@@ -72,9 +73,21 @@
     margin-left: 0;
     margin-right: 0;
   }
+
+  @media (min-width: @laptop) {
+    background-image: url("/img/logo-desktop.svg");
+    width: 202px;
+    height: 59px;
+    margin-left: 0;
+    margin-right: 0;
+    margin-top: 53px;
+    padding-top: 0;
+    padding-bottom: 0;
+  }
 }
 
 .page-header__toggle {
+  cursor: pointer;
   height: 20px;
   width: 24px;
   align-self: center;
@@ -95,4 +108,8 @@
     clip: rect(0 0 0 0);
     overflow: hidden;
   }
+}
+
+.page-header__toggle--cross {
+  background-image: url("/img/toggle-mobile-cross.svg");
 }
