--- a/source/less/globals/components/page.less
+++ b/source/less/globals/components/page.less
@@ -14,10 +14,14 @@
   margin-left: auto;
   margin-right: auto;
   position: relative;
-  background-color: @contrast;
+  background-color: @figma-background; /* ЭТО ВРЕМЕННАЯ КОНТРАСТНАЯ ПОДКЛАДКА*/
 
   @media (min-width: @tablet) {
-    min-width: 768px;
+    min-width: @tablet;
+  }
+
+  @media (min-width: @laptop) {
+    min-width: @laptop;
   }
 }
 
@@ -33,15 +37,49 @@
     min-width: @tablet;
     max-width: @tablet;
   }
+
+  @media (min-width: @laptop) {
+    min-width: @laptop;
+    max-width: @laptop;
+  }
+}
+
+.page__catalog-wrapper {
+  margin-left: 20px;
+  margin-right: 20px;
+
+  @media (min-width: @tablet) {
+    margin-left: 30px;
+    margin-right: 30px;
+  }
+
+  @media (min-width: @laptop) {
+    margin-left: 110px;
+    margin-right: 110px;
+    margin-top: 50px;
+  }
 }
 
 .page__catalog-title {
   font-size: 36px;
   line-height: 36px;
   font-weight: 400;
-  padding-left: 20px;
   padding-top: 27px;
   padding-bottom: 41px;
+
+  @media (min-width: @tablet) {
+    font-size: 60px;
+    line-height: 60px;
+    font-weight: 400;
+    padding-bottom: 22px;
+  }
+
+  @media (min-width: @laptop) {
+    font-size: 60px;
+    line-height: 60px;
+    font-weight: 400;
+    padding-bottom: 2px;
+  }
 
   &::after {
     content: "";
@@ -51,65 +89,26 @@
     background-color: @shop-grey;
     top: 170px;
     left: 0;
+
+    @media (min-width: @tablet) {
+      content: none;
+    }
   }
 }
 
-.page__promo-wrapper {
-  position: relative;
+.page__form-wrapper {
+  margin-left: 20px;
+  margin-right: 20px;
 
-  &::before {
-    content: "";
-    display: block;
-    width: 280px;
-    height: 290px;
-    background-image: url("/img/catalog-background1.jpg");
-    background-size: 279px 289px;
-    background-repeat: no-repeat;
-    position: absolute;
-    left: 20px;
-    top: 0;
+  @media (min-width: @tablet) {
+    margin-left: 70px;
+    margin-right: 70px;
   }
 
-  &::after {
-    content: "";
-    display: block;
-    position: absolute;
-    left: 20px;
-    top: 0;
-    width: 280px;
-    height: 290px;
-    background-color: rgba(@green, 0.85);
-  }
-}
-
-.page__promo {
-  display: block;
-  font-family: "Arial", sans-serif;
-  font-size: 16px;
-  line-height: 20px;
-  font-weight: 400;
-  color: @white;
-  margin-left: auto;
-  margin-right: auto;
-  text-align: center;
-  padding-top: 59px;
-  padding-bottom: 43px;
-  z-index: 1;
-  position: relative;
-  width: 161px;
-  margin-bottom: 35px;
-
-  &::before {
-    content: "";
-    display: block;
-    position: relative;
-    margin-left: auto;
-    margin-right: auto;
-    width: 78px;
-    height: 80px;
-    background-image: url("/img/icon_gift.svg");
-    background-repeat: no-repeat;
-    margin-bottom: 48px;
+  @media (min-width: @laptop) {
+    margin-left: 110px;
+    margin-right: 110px;
+    margin-top: 50px;
   }
 }
 
@@ -118,5 +117,9 @@
 
   @media (min-width: @tablet) {
     max-width: @tablet;
+  }
+
+  @media (min-width: @laptop) {
+    max-width: @laptop;
   }
 }
