--- a/source/less/globals/components/product-info.less
+++ b/source/less/globals/components/product-info.less
@@ -1,6 +1,6 @@
 // Начните писать стили здесь
 .product-info {
-  background-image: url("../img/index-background1.jpg"); /*тут заменить потом картинку 2 на 1*/
+  background-image: url("../img/index-background1.jpg");
   background-size: 320px auto;
   background-repeat: no-repeat;
   position: relative;
@@ -32,6 +32,7 @@
 
   @media (min-width: @tablet) {
     background-image: none;
+    z-index: 3;
   }
 }
 
@@ -41,6 +42,13 @@
 
   @media (min-width: @tablet) {
     min-height: 874px;
+    margin-left: 30px;
+    margin-right: 30px;
+  }
+
+  @media (min-width: @laptop) {
+    margin-left: 110px;
+    margin-right: 110px;
   }
 }
 
@@ -52,6 +60,10 @@
 
   @media (min-width: @tablet) {
     margin-left: 87px;
+  }
+
+  @media (min-width: @laptop) {
+    margin-left: 0;
   }
 
   &::after {
@@ -77,6 +89,17 @@
       left: -87px;
       z-index: -1;
     }
+
+    @media (min-width: @laptop) {
+      width: 552px;
+      height: 499px;
+      position: absolute;
+      background-repeat: no-repeat;
+      background-image: url("/img/index-can-desktop1.png");
+      top: 29px;
+      left: 448px;
+      z-index: 5;
+    }
   }
 }
 
@@ -85,7 +108,7 @@
   font-size: 36px;
   line-height: 36px;
   text-align: center;
-  color: #ffffff;
+  color: @white;
   display: block;
   padding-top: 27px;
   margin-bottom: 25px;
@@ -98,6 +121,11 @@
    width: 414px;
    text-align: start;
   }
+
+  @media (min-width: @laptop) {
+   margin-left: 80px;
+   padding-top: 111px;
+  }
 }
 
 .product-info__slogan {
@@ -106,7 +134,7 @@
   line-height: 14px;
   text-transform: uppercase;
   text-align: center;
-  color: #ffffff;
+  color: @white;
   margin-bottom: 3px;
   position: relative;
 
@@ -119,6 +147,16 @@
     margin-top: 41px;
     display: block;
   }
+
+  @media (min-width: @laptop) {
+    color: @black;
+    font-size: 20px;
+    line-height: 20px;
+    font-weight: 400;
+    text-align: start;
+    margin-top: 41px;
+    margin-left: 80px;
+  }
 }
 
 .product-info__program-selection {
@@ -128,7 +166,7 @@
   color: #ffffff;
   text-decoration: inherit;
   text-transform: uppercase;
-  background-color: #68b738;
+  background-color: @green;
   padding-top: 7px;
   padding-bottom: 7px;
   display: block;
@@ -150,5 +188,10 @@
     padding-top: 14px;
     padding-bottom: 14px;
     margin-bottom: 531px;
+  }
+
+  @media (min-width: @laptop) {
+    margin-left: 80px;
+    margin-bottom: 267px;
   }
 }
