--- a/source/less/globals/components/programs.less
+++ b/source/less/globals/components/programs.less
@@ -3,11 +3,11 @@
   position: relative;
   max-width: 320px;
   margin-top: 20px;
-}
 
-.programs-wrapper {
-  @media (min-width: @tablet) {
-    margin-left: 52px;
+  @media (min-width: @laptop) {
+    display: flex;
+    max-width: @laptop;
+    justify-content: space-between;
   }
 }
 
@@ -16,7 +16,12 @@
   position: relative;
 
   @media (min-width: @tablet) {
-    width: 676px;
+    width: 656px;
+    padding-left: 52px;
+  }
+
+  @media (min-width: @laptop) {
+    width: 518px;
     padding-left: 52px;
   }
 }
@@ -34,6 +39,10 @@
     line-height: 36px;
     padding-top: 77px;
     margin-left: 0px;
+  }
+
+  @media (min-width: @laptop) {
+    margin-left: 162px;
   }
 
   &--slim::before {
@@ -54,6 +63,15 @@
       background-size: 100%;
       left: 476px;
       top: 81px;
+    }
+
+    @media (min-width: @laptop) {
+      width: 70px;
+      height: 97px;
+      background-repeat: no-repeat;
+      background-size: 100%;
+      left: 67px;
+      top: 41px;
     }
   }
 
@@ -76,6 +94,15 @@
       left: 412px;
       top: 135px;
     }
+
+    @media (min-width: @laptop) {
+      width: 134px;
+      height: 56px;
+      background-repeat: no-repeat;
+      background-size: 100%;
+      left: 33px;
+      top: 67px;
+    }
   }
 
   &::after {
@@ -96,6 +123,13 @@
       left: 446px;
       top: 92px;
     }
+
+    @media (min-width: @laptop) {
+      width: 100px;
+      height: 100px;
+      left: 52px;
+      top: 47px;
+    }
   }
 }
 
@@ -115,6 +149,11 @@
     font-size: 16px;
     line-height: 24px;
     font-weight: 400;
+  }
+
+  @media (min-width: @laptop) {
+    width: 467px;
+    margin-top: 73px;
   }
 
   &::after {
@@ -166,6 +205,11 @@
     padding-bottom: 57px;
     font-size: 20px;
     line-height: 30px;
+  }
+
+  @media (min-width: @tablet) {
+    margin-top: 27px;
+    padding-bottom: 59px;
   }
 
   &::after {
